Fix image bug on small screens

--- a/web/components/Card/Card.module.scss
+++ b/web/components/Card/Card.module.scss
@@ -46,6 +46,7 @@
 
 .image {
   border-radius: var(--border-radius);
+  width: 100%;
 }
 
 .date {
